--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@sanity/client": "^6.22.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-truncate": "^2.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
